deployment/kubectl/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: server
spec:
  replicas: 2
  selector:
    matchLabels:
      components: server
  template:
    metadata:
      labels:
        components: server
    spec:
      containers:
        - name: proshop-server
          image: wiseadme/proshop-server:v1.5
          command: ["npm", "run", "start"]
          args: ["GITHUB_TOKEN=$(GITHUB_TOKEN)"]
          ports:
            - containerPort: 5001
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /etc/test
              name: test-config
              readOnly: true
#          startupProbe:
#            exec:
#              - curl
#              - --fail
#              - http://localhost:5001/api/v1/products
#            periodSeconds: 10
#            failureThreshold: 5
#          readinessProbe:
#            exec:
#              - curl
#              - --fail
#              - http://localhost:5001/api/v1/products
#            periodSeconds: 5
#            initialDelaySeconds: 5
      volumes:
        - name: test-config
          configMap:
            name: server-config
