deployment/kubectl/app-external-name.yml
apiVersion: v1
kind: Service
metadata:
  name: app-ext-name
  namespace: ingress-space
spec:
  type: ExternalName
  externalName: proshop-admin-clusterip.default
