deployment/kubectl/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip
  namespace: client-ns
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
#      targetPort: 3000
  selector:
    components: frontend
