deployment/kubectl/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-clusterip
  namespace: mongo-ns
spec:
  type: ClusterIP
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    components: database
