deployment/kubectl/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    components: redis
