deployment/kubectl/server-external-name.yml
apiVersion: v1
kind: Service
metadata:
  name: server-ext-name
  namespace: ingress-space
spec:
  type: ExternalName
  externalName: server-clusterapi.server
  ports:
    - port: 5001
