deployment/kubectl/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip
  namespace: server-ns
spec:
  type: ClusterIP
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    components: server
