deployment/kubectl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proshop-admin-ingress
  namespace: ingress-space
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    components: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: proshop.test
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-ext-name
              port:
                number: 3000
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: server-ext-name
              port:
                number: 80
